<resources>
    <string name="app_name">Instagram Clone</string>
    <string name="from">from</string>
    <string name="pretty_notes">Instagram</string>
    <string name="forgot_your_login_details_get_help_logging_in">Forgot your login details? Get help logging in.</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up.</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in.</string>
    <string name="or">OR</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="todo">TODO</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="default_web_client_id" translatable="false">YOUR_WEB_CLIENT_ID</string>
    <string name="title">Title</string>
    <string name="start_writing_here">Start writing here…</string>
    <string name="save">Save</string>
    <string name="back_to_home">Back to Home</string>
    <string name="textview">TextView</string>
    <string name="all_notes">All notes</string>
    <string name="create_new_note">Create new note</string>
    <string name="line">Line</string>
    <string name="signout_button">Signout button</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="reel">Reel</string>
    <string name="profile">Profile</string>
    <string name="share_profile">Share Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="bio">Bio</string>
    <string name="name">Name</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="_0">0</string>
    <string name="share">Share</string>
    <string name="write_a_caption">Write a caption…</string>
    <string name="tap_to_upload_your_reel">Tap to upload your reel</string>
    <string name="tap_to_upload_your_image">Tap to upload your image</string>
    <string name="sampleText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="sampleName">John Doe</string>
    <string name="sampleUsername">johndoe</string>
    <string name="add_a_comment">Add a comment…</string>
    <string name="no_comments_yet">No comments yet</string>
    <string name="create">Create</string>
    <string name="post">Post</string>
    <string name="comments">Comments</string>
    <string name="uploading">Uploading…</string>
    <string name="posts_">Posts</string>
    <string name="view_all_comments">View all comments</string>
    <string name="sampleTime">12 hours ago</string>
    <string name="archive">Archive</string>
    <string name="hide_like_count">Hide like count</string>
    <string name="hide_share_count">Hide share count</string>
    <string name="turn_off_commenting">Turn off commenting</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="follow">Follow</string>
    <string name="following_">Following</string>
    <string name="search_text">Search \"username\"</string>
</resources>